--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Rubik', sans-serif;
   margin: 0;
-  background-color: #f3f6fa;
+  background-color: #f3faf3;
   color: #333;
 }
 
